--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,6 +42,10 @@ pre {
   color: #afbac4;
 }
 
+input:invalid {
+  border: 2px dashed red;
+}
+
 /*=================================================================
   Basic Setup
 ==================================================================*/
